# OCAPBACKEND

./: .dockerenvfile  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  data_dumped  data_dumped.json  docker-compose.yml  docker-entrypoint.sh  logging.yml  manage.py  no-print.sh  pre-commit-config.yaml  pyproject.toml  setup.cfg
apps/pages/: apps.py  urls.py  views.py
apps/pages/static/: home.css
apps/pages/templates/: CarReg.html  DisplayRides.html  MyCars.html  home.html  legal_disclaimer.html  my_rides.html  passengers.html  register.html  ride.html
apps/website/: admin.py  api_urls.py  apps.py  backends.py  car_emissions.py  emissions.py  jsonData.py  middleware.py  urls.py
apps/website/Serilaizers/: RidesBooked_Serializer.py  Rides_serializer.py  profile_photo_preview_serializer.py
apps/website/fixtures/: data.json
apps/website/forms/: CarRegistration.py  register.py  ride.py  widgets.py
apps/website/managers/: __init__.py  car_manager.py  ride_booked_manager.py  ride_manager.py
apps/website/migrations/: 0001_initial.py  0002_initial.py  0002_profile_car_models.py  0002_profile_delete_ride_car_owner.py  0002_remove_car_engine_size_remove_car_fuel_consumption_and_more.py  0003_alter_car_owner.py  0003_alter_profile_area_alter_profile_city_and_more.py  0003_alter_profile_legal_consent_date.py  0003_carplate_alter_car_car_pallet_number.py  0004_alter_car_car_pallet_number.py  0004_alter_car_owner.py  0004_ridesbooked.py  0005_alter_car_no_of_seats.py  0005_alter_car_owner.py  0005_alter_ridesbooked_riderequested.py  0006_alter_carplate_number.py  0006_profile_profile_pic.py  0007_alter_carplate_letter_one.py  0007_profile_legal_consent_date.py  0007_ridesbooked_comment_ridesbooked_status_and_more.py  0008_alter_profile_area_alter_profile_city_ride.py  0008_alter_ridesbooked_status.py  0008_ride_model.py  0009_alter_profile_user.py  0009_ride_id_alter_car_owner.py  0009_ride_id_alter_profile_area_alter_profile_city_and_more.py  0010_alter_car_car_pallet_number_alter_ride_car.py  0010_alter_profile_user_alter_ridesbooked_status.py  0010_car_car_license_car_driver_license.py  0011_alter_car_car_license_alter_car_driver_license.py  0011_ride_car_pallet_number.py  0012_alter_car_car_license_alter_car_driver_license.py  0013_alter_car_car_license_alter_car_driver_license.py  0014_merge_20230831_1045.py  0015_car_engine_size_car_fuel_consumption_car_no_clyender_and_more.py  0016_alter_profile_user.py  0017_alter_ride_distance.py  0018_merge_20230831_1723.py  0019_alter_ridesbooked_status.py
apps/website/models/: CarRegistration.py  __init__.py  profile.py  ride.py  rides_booked.py
apps/website/templatetags/: image_byte.py
apps/website/utils/: car_emissions.py  context_processors.py  image_resize.py
apps/website/views/: CarRegistration.py  Cars.py  DeleteCar.py  (+11 more)
bootstrap/: asgi.py  urls.py  wsgi.py
bootstrap/settings/: common.py  development.py  docker.py  testing.py
carpooling/: settings.py  urls.py
certs/: Groupe_France_Telecom_Root_CA.pem  Root_CA.cer
lib/: utils.py
lib/mail_service/: mail.py
lib/s3_storage/: s3_helpers.py
nginx/: nginx-docker.conf
static/css/: boosted.css  core3.css  main.css  passengers.css  style.css
static/js/: boosted.bundle.min.js  image_resize.js  passengers.js
static/json/: areas.json  carbrands.json  cities.json  colors.json
templates/: base.html
test-reports/: report.xml
tests/: test_cars.py
tests/website/: home_test.py  tests_home.py
(+4 files in other folders)
