[tool.poetry]
name = "carpooling"
version = "0.1.0"
description = ""
authors = ["Yousab Azmy <yousab.azmy@orange.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.0.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
